--- a/src/app/ajanlat/ajanlat-tetel/ajanlat-tetel.html
+++ b/src/app/ajanlat/ajanlat-tetel/ajanlat-tetel.html
@@ -7,7 +7,7 @@
         <input type="text" class="form-control form-control-sm oszlop6" id="cikk"
                maxlength="100" autocomplete="off" style="background-color: aquamarine;display: inline-block"
                [(ngModel)]="item.CikkNev" name="cikk">
-        <button class="btn btn-sm btn-outline-primary" style="margin-left: 4px;display: inline-block" type="button" (click)="CikkZoom()">...</button>
+        <button class="toolbutton" style="margin-left: 4px;display: inline-block" type="button" (click)="CikkZoom()">...</button>
       </div>
     </div>
 
