--- a/src/app/bizonylat/bizonylattoolbar/bizonylattoolbar.component.html
+++ b/src/app/bizonylat/bizonylattoolbar/bizonylattoolbar.component.html
@@ -1,36 +1,21 @@
-<div class="row no-gutters toolbarmargins">
+<div class="toolbar">
   <ng-container *ngIf="Megrendeles">
-    <div class="toolbarcontrolmargins">
-      <select [disabled]="!enKereses" #MegrendelesSzempont type="text" class="form-control form-control-sm">
-        <option *ngFor="let msz of MegrendelesSzurok; let mi = index" [value]="mi" [selected]="mi == _megrendelesszempont">{{msz}}</option>
-      </select>
-    </div>
-  </ng-container>
-  <div class="toolbarcontrolmargins">
-    <select [disabled]="!enKereses" #Szempont type="text" class="form-control form-control-sm">
-      <option *ngFor="let sz of Szurok; let i = index" [value]="i" [selected]="i == _szempont">{{sz}}</option>
+    <select [disabled]="!enKereses" #MegrendelesSzempont type="text" class="toolcombo">
+      <option *ngFor="let msz of MegrendelesSzurok; let mi = index" [value]="mi" [selected]="mi == _megrendelesszempont">{{msz}}</option>
     </select>
-  </div>
-  <div class="toolbarcontrolmargins" style="width: 120px">
-    <input [disabled]="!enKereses" #Minta type="text" class="form-control form-control-sm">
-  </div>
+  </ng-container>
 
-  <div class="float-right" role="toolbar" aria-label="Gombok">
-    <div class="btn-group btn-group-sm" role="group" aria-label="Gombok">
-      <button [disabled]="!enKereses"
-              (click)="doKereses()"
-              class="btn btn-outline-primary toolbarcontrolmargins"
-              type="button">
-        <i class="fa fa-search" aria-hidden="true"></i>
-      </button>
-      <button [disabled]="!enUj"
-              (click)="doUj()"
-              class="btn btn-sm btn-outline-primary toolbarcontrolmarginskozel"
-              type="button">
-        <i class="fa fa-plus" aria-hidden="true"></i>
-      </button>
-    </div>
-  </div>
+  <select [disabled]="!enKereses" #Szempont type="text" class="toolcombo">
+    <option *ngFor="let sz of Szurok; let i = index" [value]="i" [selected]="i == _szempont">{{sz}}</option>
+  </select>
+
+  <input [disabled]="!enKereses" #Minta type="text" class="tooledit em10width">
+  <button [disabled]="!enKereses" (click)="doKereses()" class="toolbutton" type="button">
+    <i class="fa fa-search" aria-hidden="true"></i>
+  </button>
+  <button [disabled]="!enUj" (click)="doUj()" class="toolbutton" type="button">
+    <i class="fa fa-plus" aria-hidden="true"></i>
+  </button>
 </div>
 
 
