--- a/src/app/tools/errorbox/errorbox.component.html
+++ b/src/app/tools/errorbox/errorbox.component.html
@@ -14,7 +14,7 @@
         </ng-container>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-sm btn-secondary" data-dismiss="modal" (click)="onClose()">Ok</button>
+        <button type="button" class="toolbutton" data-dismiss="modal" (click)="onClose()">Ok</button>
       </div>
     </div>
   </div>
