--- a/src/app/tools/tetel-torles/tetel-torles.component.html
+++ b/src/app/tools/tetel-torles/tetel-torles.component.html
@@ -1,8 +1,8 @@
 <div class="alapkeret">
   <h5>{{cim}} törlése</h5>
   <p>Biztosan törölni akarja ezt a tételt?</p>
-  <div class="row no-gutters" style="margin-bottom: 10px">
-    <button class="btn btn-sm btn-primary" (click)="doOk()">Ok</button>
-    <button class="btn btn-sm btn-default" style="margin-left:3px;" (click)="doCancel()">Mégsem</button>
+  <div class="editform-okcancel" style="margin-bottom: 10px">
+    <button class="editform-okbutton" (click)="doOk()">Ok</button>
+    <button class="editform-cancelbutton" (click)="doCancel()">Mégsem</button>
   </div>
 </div>
