--- a/src/app/ugyfelter/ugyfelter/ugyfelter.component.html
+++ b/src/app/ugyfelter/ugyfelter/ugyfelter.component.html
@@ -5,7 +5,7 @@
 
   <ng-container *ngIf="!bejelentkezve">
     <p>Üdvözöljük, ön a GridSolar Group Kft. informatikai rendszerét (OSS) használja. Kérjük a levélben kapott linket kezelje bizalmasan!</p>
-    <button [disabled]="eppFrissit" (click)="folytatas()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+    <button [disabled]="eppFrissit" (click)="folytatas()" class="toolbutton">
       Folytatás
     </button>
   </ng-container>
