--- a/src/app/bizonylat/bizonylattetel-szerkesztes/bizonylattetel-szerkesztes.component.html
+++ b/src/app/bizonylat/bizonylattetel-szerkesztes/bizonylattetel-szerkesztes.component.html
@@ -52,7 +52,7 @@
              maxlength="100" required autocomplete="off" style="background-color: aquamarine">
     </div>
     <div class="col-md-1">
-      <button class="btn btn-sm btn-outline-primary" (click)="CikkZoom()"
+      <button class="toolbutton" (click)="CikkZoom()"
               style="margin-left: 4px" type="button">...</button>
     </div>
   </div>
@@ -87,7 +87,7 @@
              maxlength="10" required autocomplete="off" style="background-color: aquamarine">
     </div>
     <div class="col-md-1">
-      <button class="btn btn-sm btn-outline-primary" (click)="MeZoom()"
+      <button class="toolbutton" (click)="MeZoom()"
               style="margin-left: 4px" type="button">...</button>
     </div>
   </div>
@@ -100,7 +100,7 @@
              [(ngModel)]="TetelDtoEdited.Egysegar"
              (focusout)="tetelcalc($event)"
              required>
-      <button class="btn btn-sm btn-outline-primary" (click)="bruttobol()"
+      <button class="toolbutton" (click)="bruttobol()"
               style="margin-left: 4px;margin-right: 4px" type="button"><- Br</button>
       <input type="number" class="form-control form-control-sm" id="bruttoosszeg" name="bruttoosszeg"
              [(ngModel)]="bruttoosszeg">
@@ -116,7 +116,7 @@
              maxlength="10" required autocomplete="off" style="background-color: aquamarine">
     </div>
     <div class="col-md-1">
-      <button class="btn btn-sm btn-outline-primary" (click)="AfakulcsZoom()"
+      <button class="toolbutton" (click)="AfakulcsZoom()"
               style="margin-left: 4px" type="button">...</button>
     </div>
   </div>
@@ -150,9 +150,9 @@
              maxlength="10" autocomplete="off" style="background-color: aquamarine">
     </div>
     <div class="col-md-1">
-      <button class="btn btn-sm btn-outline-primary" (click)="TermekdijZoom()"
+      <button class="toolbutton" (click)="TermekdijZoom()"
               style="margin-left: 4px" type="button">...</button>
-      <button class="btn btn-sm btn-outline-primary" (click)="TermekdijTorles()"
+      <button class="toolbutton" (click)="TermekdijTorles()"
               style="margin-left: 4px" type="button">
         <i class="fa fa-close" aria-hidden="true"></i>
       </button>
@@ -211,9 +211,9 @@
   <div class="row no-gutters" style="margin-bottom: 10px">
     <div class="col-md-2">
     </div>
-    <button class="btn btn-sm btn-primary"
+    <button class="toolbutton"
             type="button" (click)="onSubmit()">Ok</button>
-    <button class="btn btn-sm btn-default"
+    <button class="toolbutton"
             style="margin-left:3px;" type="button" (click)="cancel()">Mégsem</button>
   </div>
 
