--- a/src/app/bizonylatkapcsolat/bizonylatkapcsolat-levalasztas/bizonylatkapcsolat-levalasztas.component.html
+++ b/src/app/bizonylatkapcsolat/bizonylatkapcsolat-levalasztas/bizonylatkapcsolat-levalasztas.component.html
@@ -1,8 +1,8 @@
 <div class="alapkeret" [appSpinner]="eppFrissit">
   <h5>Irat leválasztása</h5>
   <p>Biztosan le akarja választani ezt az iratot a bizonylatról?</p>
-  <div class="row no-gutters" style="margin-bottom: 10px">
-    <button class="btn btn-sm btn-primary" type="button" (click)="ok()">Ok</button>
-    <button class="btn btn-sm btn-default" style="margin-left:3px;" type="button" (click)="cancel()">Mégsem</button>
+  <div class="editform-okcancel" style="margin-bottom: 10px">
+    <button class="editform-okbutton" type="button" (click)="ok()">Ok</button>
+    <button class="editform-cancelbutton" type="button" (click)="cancel()">Mégsem</button>
   </div>
 </div>
