--- a/src/app/ngm/ngm.component.html
+++ b/src/app/ngm/ngm.component.html
@@ -15,7 +15,7 @@
       <div>
         <input type="date" class="form-control form-control-sm oszlop3" id="szkig"
                [(ngModel)]="szkig" name="szkig" style="display: inline-block;margin-right: 4px">
-        <button class="btn btn-sm btn-primary" (click)="szamlakelte()"
+        <button class="toolbutton" (click)="szamlakelte()"
                 style="display: inline-block;margin-right: 4px" type="button">
           <i class="fa fa-angle-right" aria-hidden="true"></i>
         </button>
@@ -34,7 +34,7 @@
       <div>
         <input type="text" class="form-control form-control-sm oszlop3" id="szszig"
                [(ngModel)]="szszig" name="szszig" style="display: inline-block;margin-right: 4px">
-        <button class="btn btn-sm btn-primary" (click)="szamlaszam()"
+        <button class="toolbutton" (click)="szamlaszam()"
                 style="display: inline-block;margin-right: 4px" type="button">
           <i class="fa fa-angle-right" aria-hidden="true"></i>
         </button>
