--- a/src/app/projektjegyzet/projekt-jegyzet-szerkesztes/projekt-jegyzet-szerkesztes.component.html
+++ b/src/app/projektjegyzet/projekt-jegyzet-szerkesztes/projekt-jegyzet-szerkesztes.component.html
@@ -4,7 +4,7 @@
 
   <form #f="ngForm" (ngSubmit)="onSubmit()">
 
-    <div class="row no-gutters editform-row">
+    <div class="editform-row">
       <div>
         <div class="editform-label">Leírás</div>
         <input type="text" class="form-control form-control-sm oszlop10" id="leiras"
@@ -13,9 +13,9 @@
       </div>
     </div>
 
-    <div class="row no-gutters editform-row">
-      <button class="btn btn-sm btn-primary" [disabled]="!f.valid" type="submit">Ok</button>
-      <button class="btn btn-sm btn-default" style="margin-left:3px;" type="button" (click)="onCancel()">Mégsem</button>
+    <div class="editform-okcancel">
+      <button class="editform-okbutton" [disabled]="!f.valid" type="submit">Ok</button>
+      <button class="editform-cancelbutton" type="button" (click)="onCancel()">Mégsem</button>
     </div>
   </form>
 </div>
