--- a/src/app/projektkapcsolat/projektkapcsolat-levalasztas/projektkapcsolat-levalasztas.component.html
+++ b/src/app/projektkapcsolat/projektkapcsolat-levalasztas/projektkapcsolat-levalasztas.component.html
@@ -1,9 +1,9 @@
 <div class="alapkeret" [appSpinner]="eppFrissit">
   <h5>{{Dto.Kapcsolat}} leválasztása</h5>
   <p>Biztosan le akarja választani ezt a tételt a projektről?</p>
-  <div class="row no-gutters" style="margin-bottom: 10px">
-    <button class="btn btn-sm btn-primary" type="button" (click)="ok()">Ok</button>
-    <button class="btn btn-sm btn-default" style="margin-left:3px;" type="button" (click)="cancel()">Mégsem</button>
+  <div class="editform-okcancel" style="margin-bottom: 10px">
+    <button class="editform-okbutton" type="button" (click)="ok()">Ok</button>
+    <button class="editform-cancelbutton" type="button" (click)="cancel()">Mégsem</button>
   </div>
 </div>
 
