--- a/src/app/ugyfel/ugyfel-csoport/ugyfel-csoport.component.html
+++ b/src/app/ugyfel/ugyfel-csoport/ugyfel-csoport.component.html
@@ -16,9 +16,9 @@
       </div>
     </div>
 
-    <div class="row no-gutters editform-row">
-      <button class="btn btn-sm btn-primary" [disabled]="!f.valid" type="button" (click)="okClick()">Ok</button>
-      <button class="btn btn-sm btn-default" [disabled]="!f.valid" style="margin-left:3px;" type="button" (click)="cancelClick()">Mégsem</button>
+    <div class="editform-okcancel">
+      <button class="editform-okbutton" [disabled]="!f.valid" type="button" (click)="okClick()">Ok</button>
+      <button class="editform-cancelbutton" [disabled]="!f.valid" type="button" (click)="cancelClick()">Mégsem</button>
     </div>
   </form>
 </div>
