--- a/src/app/ugyfelter/ugyfel-ter-link/ugyfel-ter-link.component.html
+++ b/src/app/ugyfelter/ugyfel-ter-link/ugyfel-ter-link.component.html
@@ -19,9 +19,9 @@
     <div [@rowanimation]>
       <h5>Új ügyféltér link</h5>
       <p>Ha új ügyféltér linket készít, a régi érvényessége megszűnik. Biztos benne?</p>
-      <div class="row no-gutters" style="margin-bottom: 10px">
-        <button class="btn btn-sm btn-primary" (click)="onUj()">Ok</button>
-        <button class="btn btn-sm btn-default" style="margin-left:3px;" (click)="onMegsem()">Mégsem</button>
+      <div class="editform-okcancel" style="margin-bottom: 10px">
+        <button class="editform-okbutton" (click)="onUj()">Ok</button>
+        <button class="editform-cancelbutton" style="margin-left:3px;" (click)="onMegsem()">Mégsem</button>
       </div>
     </div>
   </ng-container>
