--- a/src/app/bizonylat/bizonylat-fuvarszamla/bizonylat-fuvarszamla-uj/bizonylat-fuvarszamla-uj.component.html
+++ b/src/app/bizonylat/bizonylat-fuvarszamla/bizonylat-fuvarszamla-uj/bizonylat-fuvarszamla-uj.component.html
@@ -1,7 +1,7 @@
 <div class="alapkeret" [appSpinner]="eppFrissit">
   <h5>Új vagy felülírás</h5>
   <form #f="ngForm" (ngSubmit)="onSubmit()">
-    <div class="row no-gutters editform-row">
+    <div class="editform-row">
       <div style="display: inline-block; margin-right: 5px">
         <div class="editform-label">Fuvarszámla</div>
         <input type="text" class="form-control form-control-sm oszlop3" id="bizonylatszam"
@@ -11,7 +11,7 @@
       </div>
     </div>
 
-    <div class="row no-gutters editform-row">
+    <div class="editform-row">
       <div style="margin-right: 5px">
         <div class="editform-label">Fuvardíj</div>
         <input type="text" class="form-control form-control-sm oszlop3" id="fuvardij"
@@ -20,7 +20,7 @@
       </div>
     </div>
 
-    <div class="row no-gutters editform-row">
+    <div class="editform-row">
       <div style="margin-right: 5px">
         <div class="editform-label">Fuvardíj pénzneme</div>
         <input type="text" class="form-control form-control-sm oszlop3" id="fuvardijpenzneme"
@@ -29,7 +29,7 @@
       </div>
     </div>
 
-    <div class="row no-gutters editform-row">
+    <div class="editform-row">
       <div style="margin-right: 5px">
         <div class="editform-label">Fuvardíj árfolyama</div>
         <input type="text" class="form-control form-control-sm oszlop3" id="fuvardijarfolyama"
