--- a/src/app/bizonylat/bizonylat-penztar/bizonylat-penztar.component.html
+++ b/src/app/bizonylat/bizonylat-penztar/bizonylat-penztar.component.html
@@ -27,7 +27,7 @@
   <ng-container *ngIf="penztarkivalasztva">
     <form #f="ngForm" (ngSubmit)="onSubmit()">
 
-      <div class="row no-gutters editform-row">
+      <div class="editform-row">
         <div>
           <div class="editform-label">Pénztár</div>
           <input type="text" class="form-control form-control-sm oszlop3" id="penztar"
@@ -36,7 +36,7 @@
         </div>
       </div>
 
-      <div class="row no-gutters editform-row">
+      <div class="editform-row">
         <div>
           <div class="editform-label">Pénznem</div>
           <input type="text" class="form-control form-control-sm oszlop2" id="penznem"
@@ -45,7 +45,7 @@
         </div>
       </div>
 
-      <div class="row no-gutters editform-row">
+      <div class="editform-row">
         <div>
           <div class="editform-label">Egyenleg</div>
           <input type="text" class="form-control form-control-sm oszlop2" id="egyenleg"
@@ -54,7 +54,7 @@
         </div>
       </div>
 
-      <div class="row no-gutters editform-row">
+      <div class="editform-row">
         <div>
           <div class="editform-label">Összeg</div>
           <input type="text" class="form-control form-control-sm oszlop2" id="osszeg"
@@ -63,7 +63,7 @@
         </div>
       </div>
 
-      <div class="row no-gutters editform-row">
+      <div class="editform-row">
         <div>
           <div class="editform-label">Megjegyzés</div>
           <input type="text" class="form-control form-control-sm oszlop6" id="megjegyzes"
