--- a/src/app/bizonylatnyomtatas/bizonylat-nyomtatas/bizonylat-nyomtatas.component.html
+++ b/src/app/bizonylatnyomtatas/bizonylat-nyomtatas/bizonylat-nyomtatas.component.html
@@ -3,7 +3,7 @@
 
   <form #f="ngForm" (ngSubmit)="onSubmit()">
 
-    <div class="row no-gutters editform-row">
+    <div class="editform-row">
       <div>
         <div class="editform-label">Nyomtatás</div>
         <div *ngFor="let entry of entries;let i = index" class="form-check">
