--- a/src/app/kifizetes/kifizetes-szerkesztes/kifizetes-szerkesztes.component.html
+++ b/src/app/kifizetes/kifizetes-szerkesztes/kifizetes-szerkesztes.component.html
@@ -4,7 +4,7 @@
 
   <form #f="ngForm" (ngSubmit)="onSubmit()">
 
-    <div class="row no-gutters editform-row">
+    <div class="editform-row">
       <div>
         <div class="editform-label">Dátum</div>
         <input type="date" class="form-control form-control-sm oszlop3" id="datum"
@@ -12,7 +12,7 @@
       </div>
     </div>
 
-    <div class="row no-gutters editform-row">
+    <div class="editform-row">
       <div>
         <div class="editform-label">Összeg</div>
         <input type="number" class="form-control form-control-sm oszlop3" id="osszeg"
@@ -20,7 +20,7 @@
       </div>
     </div>
 
-    <div class="row no-gutters editform-row">
+    <div class="editform-row">
       <div>
         <div class="editform-label">Pénznem</div>
         <input type="text" class="form-control form-control-sm oszlop2" id="penznem"
@@ -31,7 +31,7 @@
       </div>
     </div>
 
-    <div class="row no-gutters editform-row">
+    <div class="editform-row">
       <div>
         <div class="editform-label">Fizetési mód</div>
         <input type="text" class="form-control form-control-sm oszlop2" id="fizetesimod"
