--- a/src/app/projekt/projekt-datumok/projekt-datumok.component.html
+++ b/src/app/projekt/projekt-datumok/projekt-datumok.component.html
@@ -4,7 +4,7 @@
   <form #f="ngForm" (ngSubmit)="onSubmit()">
 
 
-    <div class="row no-gutters editform-row">
+    <div class="editform-row">
       <div>
         <div class="editform-label">Keletkezett</div>
         <input type="date" class="form-control form-control-sm oszlop3" id="keletkezett"
@@ -12,7 +12,7 @@
       </div>
     </div>
 
-    <div class="row no-gutters editform-row">
+    <div class="editform-row">
       <div>
         <div class="editform-label">Megrendelve</div>
         <input type="date" class="form-control form-control-sm oszlop3" id="megrendelve"
@@ -20,7 +20,7 @@
       </div>
     </div>
 
-    <div class="row no-gutters editform-row">
+    <div class="editform-row">
       <div>
         <div class="editform-label">Kivitelezési határidő</div>
         <input type="date" class="form-control form-control-sm oszlop3" id="kivhat"
