--- a/src/app/projekt/projekt-muszakiallapot/projekt-muszakiallapot.component.html
+++ b/src/app/projekt/projekt-muszakiallapot/projekt-muszakiallapot.component.html
@@ -3,7 +3,7 @@
 
   <form #f="ngForm" (ngSubmit)="onSubmit()">
 
-    <div class="row no-gutters editform-row">
+    <div class="editform-row">
       <div>
         <div class="editform-label">Műszaki állapot</div>
         <div *ngFor="let entry of entries" class="form-check">
