--- a/src/app/projektkapcsolat/projektkapcsolat-ujbizonylat/projektkapcsolat-ujbizonylat.component.html
+++ b/src/app/projektkapcsolat/projektkapcsolat-ujbizonylat/projektkapcsolat-ujbizonylat.component.html
@@ -2,7 +2,7 @@
   <h5>Új bizonylat</h5>
 
   <form #f="ngForm" (ngSubmit)="onSubmit()">
-    <div class="row no-gutters editform-row">
+    <div class="editform-row">
       <div>
         <div class="editform-label">Bizonylattipus</div>
         <div *ngFor="let entry of entries; let i = index" class="form-check">
