--- a/src/app/bizonylat/bizonylat-errol/bizonylat-errol.component.html
+++ b/src/app/bizonylat/bizonylat-errol/bizonylat-errol.component.html
@@ -3,7 +3,7 @@
 
   <form #f="ngForm" (ngSubmit)="onSubmit()">
     <ng-container *ngIf="!kesz">
-      <div class="row no-gutters editform-row">
+      <div class="editform-row">
         <div>
           <div class="editform-label">Új bizonylattipus</div>
           <div *ngFor="let entry of entries; let i = index" class="form-check">
