--- a/src/app/penztar/penztar-export/penztar-export.component.html
+++ b/src/app/penztar/penztar-export/penztar-export.component.html
@@ -3,20 +3,16 @@
 
   <form #f="ngForm" (ngSubmit)="onSubmit()">
 
-    <div class="row no-gutters editform-row">
-      <div>
+    <div class="editform-row">
         <div class="editform-label">Dátumtól</div>
         <input type="date" class="form-control form-control-sm oszlop3" id="tol"
                [(ngModel)]="tol" name="tol">
-      </div>
     </div>
 
-    <div class="row no-gutters editform-row">
-      <div>
+    <div class="editform-row">
         <div class="editform-label">Dátumig</div>
         <input type="date" class="form-control form-control-sm oszlop3" id="ig"
                [(ngModel)]="ig" name="ig">
-      </div>
     </div>
 
     <div class="editform-okcancel">
