--- a/src/app/projekt/projekt-napelem/projekt-napelem.component.html
+++ b/src/app/projekt/projekt-napelem/projekt-napelem.component.html
@@ -3,7 +3,7 @@
 
   <form #f="ngForm" (ngSubmit)="onSubmit()">
 
-    <div class="row no-gutters editform-row">
+    <div class="editform-row">
       <div>
         <div class="editform-label">Napelem</div>
         <input type="text" class="form-control form-control-sm oszlop4" id="napelem"
@@ -13,7 +13,7 @@
       </div>
     </div>
 
-    <div class="row no-gutters editform-row">
+    <div class="editform-row">
       <div>
         <div class="editform-label">DC, kW</div>
         <input type="number" class="form-control form-control-sm oszlop2" id="dckw"
@@ -22,7 +22,7 @@
       </div>
     </div>
 
-    <div class="row no-gutters editform-row">
+    <div class="editform-row">
       <div>
         <div class="editform-label">Napelem státusz</div>
         <div *ngFor="let entry of entries" class="form-check">
