--- a/src/app/ajanlat/ajanlat-tabla/ajanlat-tabla.component.html
+++ b/src/app/ajanlat/ajanlat-tabla/ajanlat-tabla.component.html
@@ -1,4 +1,5 @@
-<table class="table table-bordered table-sm table-responsive" style="border: none">
+<!--<table class="table table-bordered table-sm table-responsive" style="border: none">-->
+<table>
   <thead>
     <tr>
       <th>Tételtipus</th>
@@ -16,8 +17,7 @@
   <tbody>
     <ng-container *ngFor="let item of items; let i = index">
       <tr (click)="clickforrow(i)" [className]="i === clickedidindex || i === clickedrowindex ? 'active' : 'inactive'">
-        <td style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"
-            (click)="clickforid(i)">{{item.TetelTipus}}</td>
+        <td class="itemID" (click)="clickforid(i)">{{item.TetelTipus}}</td>
         <td>{{item.CikkNev}}</td>
         <td>{{item.Mennyiseg}}</td>
         <td>{{item.EgysegAr}}</td>
