--- a/src/app/riport/keszlet/keszlet.component.html
+++ b/src/app/riport/keszlet/keszlet.component.html
@@ -3,7 +3,7 @@
 
   <form #f="ngForm" (ngSubmit)="onSubmit()">
 
-    <div class="row no-gutters editform-row">
+    <div class="editform-row">
       <div>
         <div class="editform-label">Időpontig</div>
         <input type="date" class="form-control form-control-sm oszlop3" id="datum"
