--- a/src/app/ajanlat/ajanlat-tetel/ajanlat-tetel.html
+++ b/src/app/ajanlat/ajanlat-tetel/ajanlat-tetel.html
@@ -1,44 +1,38 @@
 <div class="alapkeret">
   <form #f="ngForm" (ngSubmit)="onSubmit()">
 
-    <div class="row no-gutters editform-row">
-      <div>
+    <div class="editform-row">
         <div class="editform-label">{{item.TetelTipus}}</div>
-        <input type="text" class="form-control form-control-sm oszlop6" id="cikk"
+        <input type="text" class="editform-edit em20width" id="cikk"
                maxlength="100" autocomplete="off" style="background-color: aquamarine;display: inline-block"
                [(ngModel)]="item.CikkNev" name="cikk">
-        <button class="toolbutton" style="margin-left: 4px;display: inline-block" type="button" (click)="CikkZoom()">...</button>
-      </div>
+        <button class="toolbutton" style="display: inline-block" type="button" (click)="CikkZoom()">...</button>
     </div>
 
-    <div class="row no-gutters editform-row">
-      <div>
+    <div class="editform-row">
+      <div class="editform-row-block">
         <div class="editform-label">Mennyiség</div>
-        <input type="number" class="form-control form-control-sm oszlop2" id="mennyiseg"
-               style="display: inline-block;margin-right: 3px"
+        <input type="number" class="editform-edit em6width" id="mennyiseg"
                [(ngModel)]="item.Mennyiseg" name="mennyiseg">
       </div>
 
-      <div>
+      <div class="editform-row-block">
         <div class="editform-label">Egységár</div>
-        <input type="number" class="form-control form-control-sm oszlop2" id="egysegar"
-               style="display: inline-block;margin-right: 3px"
+        <input type="number" class="editform-edit em6width" id="egysegar"
                [(ngModel)]="item.EgysegAr" name="egysegar">
       </div>
     </div>
 
-    <div class="row no-gutters editform-row">
-      <div>
+    <div class="editform-row">
+      <div class="editform-row-block">
         <div class="editform-label">Egys. teljesítmény</div>
-        <input type="number" class="form-control form-control-sm oszlop2" id="egysegnyi"
-               style="display: inline-block;margin-right: 3px"
+        <input type="number" class="editform-edit em6width" id="egysegnyi"
                [(ngModel)]="item.EgysegnyiTeljesitmeny" name="egysegnyi">
       </div>
 
-      <div>
+      <div class="editform-row-block">
         <div class="editform-label">Garancia</div>
-        <input type="number" class="form-control form-control-sm oszlop2" id="garancia"
-               style="display: inline-block;margin-right: 3px"
+        <input type="number" class="editform-edit em6width" id="garancia"
                [(ngModel)]="item.Garancia" name="garancia">
       </div>
     </div>
