--- a/src/app/ajanlat/ajanlat/ajanlat.html
+++ b/src/app/ajanlat/ajanlat/ajanlat.html
@@ -2,43 +2,39 @@
   <h5>Új ajánlat</h5>
 
     <div class="editform-row">
-      <div>
         <div class="editform-label">Érvényes</div>
-        <input type="date" class="form-control form-control-sm oszlop3" id="ervenyes"
+        <input type="date" class="editform-date em10width" id="ervenyes"
                [(ngModel)]="AjanlatErvenyes" name="ervenyes">
-      </div>
     </div>
 
     <div class="editform-row">
-      <div style="display: inline-block">
+      <div class="editform-row-block">
         <div class="editform-label">Szüks. áramerősség</div>
-        <input type="text" class="editform-edit em4width" id="szuksaram"
-               maxlength="20" required autocomplete="off" style="display: inline-block;margin-right: 3px"
+        <input type="text" class="editform-edit em6width" id="szuksaram"
+               maxlength="20" required autocomplete="off"
                [(ngModel)]="AjanlatParam.SzuksegesAramerosseg" name="szuksaram">
       </div>
 
-      <div style="display: inline-block">
+      <div class="editform-row-block">
         <div class="editform-label">Tájolás</div>
-        <input type="text" class="editform-edit em4width" id="tajolas"
-               maxlength="20" required autocomplete="off" style="display: inline-block;margin-right: 3px"
+        <input type="text" class="editform-edit em6width" id="tajolas"
+               maxlength="20" required autocomplete="off"
                [(ngModel)]="AjanlatParam.Tajolas" name="tajolas">
       </div>
 
-      <div style="display: inline-block">
+      <div class="editform-row-block">
         <div class="editform-label">Termelés</div>
-        <input type="number" class="editform-edit em4width" id="termeles"
-               required style="display: inline-block;margin-right: 3px"
+        <input type="number" class="editform-edit em6width" id="termeles"
+               required
                [(ngModel)]="AjanlatParam.Termeles" name="termeles">
       </div>
     </div>
 
     <div class="editform-row">
-      <div>
         <div class="editform-label">Megjegyzés (tárgy)</div>
-        <input type="text" class="editform-edit em15width" id="megjegyzes"
+        <input type="text" class="editform-edit em30width" id="megjegyzes"
                maxlength="200" autocomplete="off"
                [(ngModel)]="AjanlatParam.Megjegyzes" name="megjegyzes">
-      </div>
     </div>
 
     <div class="editform-row">
@@ -52,17 +48,19 @@
                disabled="true" [(ngModel)]="AjanlatParam.Brutto">
     </div>
 
-    <app-ajanlat-tabla #tabla
-                       [items]="AjanlatParam.AjanlatBuf"
-                       [tetelTemplate]="tetel"
-                       (forid)="onId($event)">
-    </app-ajanlat-tabla>
+    <div class="editform-row">
+      <app-ajanlat-tabla #tabla
+                         [items]="AjanlatParam.AjanlatBuf"
+                         [tetelTemplate]="tetel"
+                         (forid)="onId($event)">
+      </app-ajanlat-tabla>
 
-    <ng-template #tetel>
-      <app-ajanlat-tetel [item]="ajanlatitem"
-                         (eventTetelKesz)="onTetelKesz($event)">
-      </app-ajanlat-tetel>
-    </ng-template>
+      <ng-template #tetel>
+        <app-ajanlat-tetel [item]="ajanlatitem"
+                           (eventTetelKesz)="onTetelKesz($event)">
+        </app-ajanlat-tetel>
+      </ng-template>
+    </div>
 
     <div class="editform-okcancel">
       <button class="editform-okbutton" type="button" (click)="onSubmit()">Ok</button>
