--- a/src/styles.css
+++ b/src/styles.css
@@ -56,6 +56,12 @@ th {
 .em6width {
   width: 6em;
 }
+.em8width {
+  width: 8em;
+}
+.em9width {
+  width: 9em;
+}
 .em10width {
   width: 10em;
 }
