--- a/src/app/bizonylat/bizonylat-errol/bizonylat-errol.component.html
+++ b/src/app/bizonylat/bizonylat-errol/bizonylat-errol.component.html
@@ -6,11 +6,11 @@
       <div class="editform-row">
         <div>
           <div class="editform-label">Új bizonylattipus</div>
-          <div *ngFor="let entry of entries; let i = index" class="form-check">
-            <input class="form-check-input" type="radio" name="radiogroup" id="entry"
+          <div *ngFor="let entry of entries; let i = index">
+            <input type="radio" name="radiogroup" id="entry"
                    [checked]="i === entryindex"
                    (change)="change(i)">
-            <label class="form-check-label" for="entry">
+            <label for="entry">
               {{entry[0]}}
             </label>
           </div>
