--- a/src/app/bizonylat/bizonylat-fuvarszamla/bizonylat-fuvarszamla-uj/bizonylat-fuvarszamla-uj.component.html
+++ b/src/app/bizonylat/bizonylat-fuvarszamla/bizonylat-fuvarszamla-uj/bizonylat-fuvarszamla-uj.component.html
@@ -2,40 +2,32 @@
   <h5>Új vagy felülírás</h5>
   <form #f="ngForm" (ngSubmit)="onSubmit()">
     <div class="editform-row">
-      <div style="display: inline-block; margin-right: 5px">
         <div class="editform-label">Fuvarszámla</div>
-        <input type="text" class="form-control form-control-sm oszlop3" id="bizonylatszam"
+        <input type="text" class="editform-edit em10width" id="bizonylatszam"
                maxlength="100" required autocomplete="off" style="background-color: aquamarine; display: inline-block"
                [(ngModel)]="dtoFuvarszamla.Bizonylatszam" name="bizonylatszam">
         <button class="toolbutton" style="margin-left: 4px; display: inline-block" type="button" (click)="BizonylatZoom()">...</button>
-      </div>
     </div>
 
     <div class="editform-row">
-      <div style="margin-right: 5px">
         <div class="editform-label">Fuvardíj</div>
-        <input type="text" class="form-control form-control-sm oszlop3" id="fuvardij"
+        <input type="text" class="editform-edit em10width" id="fuvardij"
                maxlength="20" required autocomplete="off"
                [(ngModel)]="Fuvardij" name="fuvardij">
-      </div>
     </div>
 
     <div class="editform-row">
-      <div style="margin-right: 5px">
         <div class="editform-label">Fuvardíj pénzneme</div>
-        <input type="text" class="form-control form-control-sm oszlop3" id="fuvardijpenzneme"
-               maxlength="20" required autocomplete="off" readonly
+        <input type="text" class="editform-edit em10width" id="fuvardijpenzneme"
+               maxlength="20" required autocomplete="off" disabled="true"
                [(ngModel)]="dtoFuvarszamla.Penznem" name="fuvardijpenzneme">
-      </div>
     </div>
 
     <div class="editform-row">
-      <div style="margin-right: 5px">
         <div class="editform-label">Fuvardíj árfolyama</div>
-        <input type="text" class="form-control form-control-sm oszlop3" id="fuvardijarfolyama"
-               maxlength="20" required autocomplete="off" readonly
+        <input type="text" class="editform-edit em10width" id="fuvardijarfolyama"
+               maxlength="20" required autocomplete="off" disabled="true"
                [(ngModel)]="dtoFuvarszamla.Arfolyam" name="fuvardijarfolyama">
-      </div>
     </div>
 
     <div class="editform-okcancel">
