--- a/src/app/bizonylat/bizonylat-storno/bizonylat-storno.component.html
+++ b/src/app/bizonylat/bizonylat-storno/bizonylat-storno.component.html
@@ -1,6 +1,8 @@
 <div class="alapkeret" [appSpinner]="eppFrissit">
   <h5>{{bizonylatLeiro.BizonylatNev}} storno</h5>
-  <div>Biztosan stornozni akarja ezt a tételt?</div>
+  <div class="editform-row">
+    Biztosan stornozni akarja ezt a tételt?
+  </div>
   <div class="editform-okcancel" style="margin-bottom: 10px">
     <button class="editform-okbutton" type="button" (click)="ok()">Ok</button>
     <button class="editform-cancelbutton" type="button" (click)="cancel()">Mégsem</button>
