--- a/src/app/bizonylat/bizonylat-szerkesztes/bizonylat-szerkesztes.component.html
+++ b/src/app/bizonylat/bizonylat-szerkesztes/bizonylat-szerkesztes.component.html
@@ -2,119 +2,98 @@
   <h5 *ngIf="uj">Új {{bizonylatLeiro.BizonylatNev | lowercase}}</h5>
   <h5 *ngIf="!uj">{{bizonylatLeiro.BizonylatNev}} módosítása</h5>
 
-  <div class="row no-gutters editform-row">
-    <div class="col-md-1">
-      <div class="editform-title">Ügyfél</div>
-    </div>
-    <div class="col-md-4">
-      <input type="text" class="form-control form-control-sm" id="ugyfelnev"
+  <div class="editform-box">
+    <div class="editform-row editform-row-block">
+      <div class="editform-label">Ügyfél</div>
+      <input type="text" class="editform-edit em30width" id="ugyfelnev"
              maxlength="200" required autocomplete="off" style="background-color: aquamarine"
              [(ngModel)]="ComplexDtoEdited.Dto.Ugyfelnev">
+      <button class="toolbutton" (click)="UgyfelZoom()" [disabled] = "SzerkesztesMode !== 1" type="button">...</button>
     </div>
-    <div class="col-md-1">
-      <button class="toolbutton" (click)="UgyfelZoom()"
-              [disabled] = "SzerkesztesMode !== 1"
-              style="margin-left: 4px" type="button">...</button>
-    </div>
-    <div class="col-md-2">
-      <div class="editform-title">Pénznem</div>
-    </div>
-    <div class="col-md-1">
-      <input type="text" class="form-control form-control-sm" id="penznem"
-             maxlength="3" required autocomplete="off" style="background-color: aquamarine"
-             [(ngModel)]="ComplexDtoEdited.Dto.Penznem">
-    </div>
-    <div class="col-md-1">
-      <button class="toolbutton" (click)="PenznemZoom()"
-              [disabled] = "SzerkesztesMode !== 1"
-              style="margin-left: 4px" type="button">...</button>
-    </div>
-  </div>
-  <div class="row no-gutters editform-row">
-    <div class="col-md-1">
-      <div class="editform-title"></div>
-    </div>
-    <div class="col-md-4">
-      <input type="text" class="form-control form-control-sm" id="ugyfelcim"
-             readonly
+
+    <div class="editform-row">
+      <div class="editform-label">Cím</div>
+      <input type="text" class="editform-edit em30width" id="cim"
+             maxlength="200" required autocomplete="off" disabled="true"
              [(ngModel)]="ComplexDtoEdited.Dto.Ugyfelcim">
     </div>
-    <div class="col-md-3">
-      <div class="editform-title">Árfolyam</div>
+
+    <div class="editform-row">
+      <div class="editform-label">Megjegyzés</div>
+      <input type="text" class="editform-edit em30width" id="megjegyzes"
+             maxlength="200" autocomplete="off"
+             [(ngModel)]="ComplexDtoEdited.Dto.Megjegyzesfej">
     </div>
-    <div class="col-md-2">
-      <input type="number" class="form-control form-control-sm" id="arfolyam"
-             [(ngModel)]="ComplexDtoEdited.Dto.Arfolyam">
+
+    <div class="editform-row">
+      <div class="editform-row-block">
+        <div class="editform-label">Netto</div>
+        <input type="number" class="editform-edit em9width" id="netto1"
+               disabled="true"
+               [(ngModel)]="ComplexDtoEdited.Dto.Netto">
+      </div>
+
+      <div class="editform-row-block">
+        <div class="editform-label">Áfa</div>
+        <input type="number" class="editform-edit em9width" id="afa1"
+               disabled="true"
+               [(ngModel)]="ComplexDtoEdited.Dto.Afa">
+      </div>
+
+      <div class="editform-row-block">
+        <div class="editform-label">Brutto</div>
+        <input type="number" class="editform-edit em9width" id="brutto1"
+               disabled="true"
+               [(ngModel)]="ComplexDtoEdited.Dto.Brutto">
+      </div>
     </div>
   </div>
-  <div class="row no-gutters editform-row">
-    <div class="col-md-1">
-      <div class="editform-title">Megjegyzés</div>
+
+  <div class="editform-box">
+    <div class="editform-row">
+      <div class="editform-row-block">
+        <div class="editform-label">Pénznem</div>
+        <input type="text" class="editform-edit em6width" id="penznem1"
+               maxlength="3" required autocomplete="off" style="background-color: aquamarine"
+               [(ngModel)]="ComplexDtoEdited.Dto.Penznem">
+        <button class="toolbutton" (click)="PenznemZoom()" [disabled] = "SzerkesztesMode !== 1" type="button">...</button>
+      </div>
+
+      <div class="editform-row-block">
+        <div class="editform-label">Árfolyam</div>
+        <input type="number" class="editform-edit em6width" id="arfolyam"
+               [(ngModel)]="ComplexDtoEdited.Dto.Arfolyam">
+      </div>
     </div>
-    <div class="col-md-4">
-      <input type="text" class="form-control form-control-sm" id="megjegyzes"
-             autocomplete="off"
-             [(ngModel)]="ComplexDtoEdited.Dto.Megjegyzesfej" name="megjegyzes">
-    </div>
-    <div class="col-md-3">
-      <div class="editform-title">Fizetési mód</div>
-    </div>
-    <div class="col-md-2">
-      <input type="text" class="form-control form-control-sm" id="fizetesimod"
+
+    <div class="editform-row editform-row-block">
+      <div class="editform-label">Fizetési mód</div>
+      <input type="text" class="editform-edit em10width" id="fizetesimod"
              maxlength="20" required autocomplete="off" style="background-color: aquamarine"
-             [(ngModel)]="ComplexDtoEdited.Dto.Fizetesimod" name="megjegyzes">
+             [(ngModel)]="ComplexDtoEdited.Dto.Fizetesimod">
+      <button class="toolbutton" (click)="FizetesimodZoom()" [disabled] = "SzerkesztesMode !== 1" type="button">...</button>
+      <button class="toolbutton" (click)="Bk()" type="button">Bk</button>
+      <button class="toolbutton" (click)="Kp()" type="button">Kp</button>
     </div>
-    <div class="col-md-1">
-      <button class="btoolbutton" (click)="FizetesimodZoom()"
-              [disabled] = "SzerkesztesMode !== 1"
-              style="margin-left: 4px" type="button">...</button>
-      <button class="toolbutton" (click)="Bk()" style="margin-left: 4px" type="button">Bk</button>
-      <button class="toolbutton" (click)="Kp()" style="margin-left: 4px" type="button">Kp</button>
-    </div>
-  </div>
-  <div class="row no-gutters editform-row">
-    <div class="col-md-1">
-    </div>
-    <div class="col-md-4 input-group">
-      <input type="text" class="form-control form-control-sm" id="netto" style="text-align:right"
-             readonly="true" [(ngModel)]="ComplexDtoEdited.Dto.Netto">
-      <input type="text" class="form-control form-control-sm" id="afa" style="text-align:right"
-             readonly="true" [(ngModel)]="ComplexDtoEdited.Dto.Afa">
-      <input type="text" class="form-control form-control-sm" id="brutto" style="text-align:right"
-             readonly="true" [(ngModel)]="ComplexDtoEdited.Dto.Brutto">
-    </div>
-    <div class="col-md-3">
-      <div class="editform-title">A bizonylat kelte</div>
-    </div>
-    <div class="col-md-2">
-      <input type="date" class="form-control form-control-sm" id="bizonylatkelte"
-             [(ngModel)]="BizonylatKelte">
-    </div>
-  </div>
-  <div class="row no-gutters editform-row">
-    <div class="col-md-1">
-    </div>
-    <div class="col-md-4">
-    </div>
-    <div class="col-md-3">
-      <div class="editform-title">A teljesités kelte</div>
-    </div>
-    <div class="col-md-2">
-      <input type="date" class="form-control form-control-sm" id="teljesiteskelte"
-             [(ngModel)]="TeljesitesKelte">
-    </div>
-  </div>
-  <div class="row no-gutters editform-row">
-    <div class="col-md-1">
-    </div>
-    <div class="col-md-4">
-    </div>
-    <div class="col-md-3">
-      <div class="editform-title">Fizetési határidő</div>
-    </div>
-    <div class="col-md-2">
-      <input type="date" class="form-control form-control-sm" id="fizetesihatarido"
-             [(ngModel)]="FizetesiHatarido">
+
+    <div class="editform-row">
+      <div class="editform-row-block">
+        <div class="editform-label">A bizonylat kelte</div>
+        <input type="date" class="editform-date em10width" id="bizonylatkelte"
+               [(ngModel)]="BizonylatKelte">
+      </div>
+
+      <div class="editform-row-block">
+        <div class="editform-label">A teljesités kelte</div>
+        <input type="date" class="editform-date em10width" id="teljesiteskelte"
+               [(ngModel)]="TeljesitesKelte">
+      </div>
+
+      <div class="editform-row-block">
+        <div class="editform-label">Fizetési határidő</div>
+        <input type="date" class="editform-date em10width" id="fizetesihatarido"
+               [(ngModel)]="FizetesiHatarido">
+      </div>
     </div>
   </div>
 
@@ -127,52 +106,56 @@
   TetelTorles = 6,
   }-->
 
-  <ng-container *ngIf="SzerkesztesMode === 2">
-    <app-ugyfel-list [maszk]="ComplexDtoEdited.Dto.Ugyfelnev || ''"
-                     (eventSelectzoom)="onUgyfelSelectzoom($event)"
-                     (eventStopzoom)="onUgyfelStopzoom()"></app-ugyfel-list>
-  </ng-container>
+  <div class="editform-okcancel">
+    <ng-container *ngIf="SzerkesztesMode === 2">
+      <app-ugyfel-list [maszk]="ComplexDtoEdited.Dto.Ugyfelnev || ''"
+                       (eventSelectzoom)="onUgyfelSelectzoom($event)"
+                       (eventStopzoom)="onUgyfelStopzoom()"></app-ugyfel-list>
+    </ng-container>
 
-  <ng-container *ngIf="SzerkesztesMode === 3">
-    <app-penznem-list [maszk]="ComplexDtoEdited.Dto.Penznem || ''"
-                      (eventSelectzoom)="onPenznemSelectzoom($event)"
-                      (eventStopzoom)="onPenznemStopzoom()"></app-penznem-list>
-  </ng-container>
+    <ng-container *ngIf="SzerkesztesMode === 3">
+      <app-penznem-list [maszk]="ComplexDtoEdited.Dto.Penznem || ''"
+                        (eventSelectzoom)="onPenznemSelectzoom($event)"
+                        (eventStopzoom)="onPenznemStopzoom()"></app-penznem-list>
+    </ng-container>
 
-  <ng-container *ngIf="SzerkesztesMode === 4">
-    <app-fizetesimod-list [maszk]="ComplexDtoEdited.Dto.Fizetesimod || ''"
-                          (eventSelectzoom)="onFizetesimodSelectzoom($event)"
-                          (eventStopzoom)="onFizetesimodStopzoom()"></app-fizetesimod-list>
-  </ng-container>
+    <ng-container *ngIf="SzerkesztesMode === 4">
+      <app-fizetesimod-list [maszk]="ComplexDtoEdited.Dto.Fizetesimod || ''"
+                            (eventSelectzoom)="onFizetesimodSelectzoom($event)"
+                            (eventStopzoom)="onFizetesimodStopzoom()"></app-fizetesimod-list>
+    </ng-container>
+  </div>
 
-  <div class="alapkeret">
-    <button (click)="onTetelUjElott()" class="toolbutton">
-      <i class="fa fa-plus" style="margin-right: 3px" aria-hidden="true"></i>
-    </button>
-    <app-bizonylatteteltabla #teteltabla
-                             [enEdit]="true"
-                             [Dto]="ComplexDtoEdited.LstTetelDto"
-                             [ujTemplate]="gridmod"
-                             [torlesTemplate]="gridtorles"
-                             [modTemplate]="gridmod"
-                             (eventTorlesElott)="onTetelTorlesElott($event)"
-                             (eventModositasElott)="onTetelModositasElott($event)">
-    </app-bizonylatteteltabla>
+  <div class="editform-okcancel">
+    <div class="alapkeret">
+      <button (click)="onTetelUjElott()" class="toolbutton">
+        <i class="fa fa-plus" style="margin-right: 3px" aria-hidden="true"></i>
+      </button>
+      <app-bizonylatteteltabla #teteltabla
+                               [enEdit]="true"
+                               [Dto]="ComplexDtoEdited.LstTetelDto"
+                               [ujTemplate]="gridmod"
+                               [torlesTemplate]="gridtorles"
+                               [modTemplate]="gridmod"
+                               (eventTorlesElott)="onTetelTorlesElott($event)"
+                               (eventModositasElott)="onTetelModositasElott($event)">
+      </app-bizonylatteteltabla>
 
-    <ng-template #gridtorles>
-      <app-tetel-torles [cim]="'Bizonylattétel'"
-                        (eventTorles)="onTeteltorles($event)">
-      </app-tetel-torles>
-    </ng-template>
+      <ng-template #gridtorles>
+        <app-tetel-torles [cim]="'Bizonylattétel'"
+                          (eventTorles)="onTeteltorles($event)">
+        </app-tetel-torles>
+      </ng-template>
 
-    <ng-template #gridmod>
-      <app-bizonylattetel-szerkesztes [teteluj]="teteluj"
-                                      [bizonylatLeiro]="bizonylatLeiro"
-                                      [szvesz]="szvesz"
-                                      [TetelDtoEdited]="TetelDtoEdited"
-                                      (eventUjModositasUtan)="onUjModositasUtan($event)">
-      </app-bizonylattetel-szerkesztes>
-    </ng-template>
+      <ng-template #gridmod>
+        <app-bizonylattetel-szerkesztes [teteluj]="teteluj"
+                                        [bizonylatLeiro]="bizonylatLeiro"
+                                        [szvesz]="szvesz"
+                                        [TetelDtoEdited]="TetelDtoEdited"
+                                        (eventUjModositasUtan)="onUjModositasUtan($event)">
+        </app-bizonylattetel-szerkesztes>
+      </ng-template>
+    </div>
   </div>
 
   <div class="editform-okcancel" style="margin-bottom: 10px">
